cargo-features = ["codegen-backend"]

[package]
name = "tiled"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_ecs_tiled = "0.10.0"
bevy_ecs_tilemap = {  version = "0.17.0", features = ["render", "serde"] }
thiserror = "2.0.17"
serde_json = "1.0.149"
log = "0.4.29"
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-C",
    "link-arg=-fuse-ld=lld",
    "-Zshare-generics=y",
]

[toolchain]
channel = "nightly"

[unstable]
codegen-backend = true
